trunk/Archive2/1c/ce27b0ff5a1d23/output
main.cpp:8:13: error: member access into incomplete type 'const A'
    int c[a -> b];
            ^
main.cpp:3:8: note: definition of 'A' is not complete until the closing '}'
struct A
       ^
main.cpp:8:9: error: duplicate member 'c'
    int c[a -> b];
        ^
main.cpp:7:9: note: previous declaration is here
    int c[b];
        ^
2 errors generated.
